# tickle

./: .gitignore  Cargo.toml  LICENSE  LICENSE-MIT  README.md  license.html  setup.sh  test_runner.sh
.github/workflows/: ci.yml
docs/: COMPILATION_FIXES.md  HISTORY_FEATURE.md  TEST_DOCUMENTATION.md  TEST_QUICK_REFERENCE.md
src/: main.rs
tests/: integration_tests.rs
